--- a/charts/incubator/sftpgo/values.yaml
+++ b/charts/incubator/sftpgo/values.yaml
@@ -1,34 +1,26 @@
-env:
-  SFTPGO_COMMON__DEFENDER__ENABLED: "true"
-  SFTPGO_FTPD__BINDINGS__0__DEBUG: "0"
-  SFTPGO_FTPD__BINDINGS__0__FORCE_PASSIVE_IP: 10.0.0.10
-  SFTPGO_FTPD__BINDINGS__0__PORT: "2121"
-  SFTPGO_FTPD__PASSIVE_PORT_RANGE__END: "50100"
-  SFTPGO_FTPD__PASSIVE_PORT_RANGE__START: "50000"
-  SFTPGO_WEBDAVD__BINDINGS__0__PORT: "10080"
 image:
   pullPolicy: IfNotPresent
   repository: tccr.io/truecharts/sftpgo
   tag: latest@sha256:cf98201352134ccb3094c7effb4bb9970cb8d02a2c02e040ed94e61b6b891a9f
-persistence:
-  backupdirectory:
-    enabled: true
-    mountPath: /srv/sftpgo/backups
-  configpath:
-    enabled: true
-    mountPath: /var/lib/sftpgo
-  data:
-    enabled: true
-    mountPath: /srv/sftpgo/data
-  shareaccess:
-    enabled: true
-    mountPath: /unraid
+
 podSecurityContext:
   runAsGroup: 0
   runAsUser: 0
+
 securityContext:
   readOnlyRootFilesystem: false
   runAsNonRoot: false
+
+env:
+  SFTPGO_COMMON__DEFENDER__ENABLED: "true"
+  SFTPGO_FTPD__BINDINGS__0__DEBUG: "0"
+  SFTPGO_FTPD__BINDINGS__0__FORCE_PASSIVE_IP: 10.0.0.10
+  SFTPGO_FTPD__BINDINGS__0__PORT: "{{ .Values.service.ftpport.ports.ftpport.port }}"
+  SFTPGO_SFTPD__BINDINGS__0__PORT: "{{ .Values.service.sftpport.ports.sftpport.port }}"
+  SFTPGO_FTPD__PASSIVE_PORT_RANGE__END: "50100"
+  SFTPGO_FTPD__PASSIVE_PORT_RANGE__START: "50000"
+  SFTPGO_WEBDAVD__BINDINGS__0__PORT: "{{ .Values.service.webdavport.ports.webdavport.port }}"
+
 service:
   ftpport:
     enabled: true
@@ -71,3 +63,15 @@ service:
 
 portal:
   enabled: true
+
+persistence:
+  backupdirectory:
+    enabled: true
+    mountPath: /srv/sftpgo/backups
+  configpath:
+    enabled: true
+    mountPath: /var/lib/sftpgo
+  data:
+    enabled: true
+    mountPath: /srv/sftpgo/data
+
