not ready for any stable yet

--- a/charts/incubator/sftpgo/questions.yaml
+++ b/charts/incubator/sftpgo/questions.yaml
@@ -16,39 +16,19 @@ questions:
       type: dict
       attrs:
         - variable: SFTPGO_FTPD__BINDINGS__0__FORCE_PASSIVE_IP
-          label: "SFTPGo Bindings"
+          label: "SFTPGO_FTPD__BINDINGS__0__FORCE_PASSIVE_IP"
           description: "Put your server IP here for local access, or your public IP for public access via port forwarding."
           schema:
             type: string
             default: "10.0.0.10"
         - variable: SFTPGO_COMMON__DEFENDER__ENABLED
-          label: "SFTPGO_COMMON__DEFENDER__ENABLED"
+          label: "Enable SFTPGo Built-in Defender"
           description: "The built-in defender allows you to configure an auto-blocking policy for SFTPGo and thus helps to prevent DoS (Denial of Service) and brute force password guessing."
           schema:
             type: string
             default: "true"
-        - variable: SFTPGO_FTPD__PASSIVE_PORT_RANGE__START
-          label: "SFTPGO_FTPD__PASSIVE_PORT_RANGE__START"
-          schema:
-            type: string
-            default: "50000"
-        - variable: SFTPGO_FTPD__PASSIVE_PORT_RANGE__END
-          label: "SFTPGO_FTPD__PASSIVE_PORT_RANGE__END"
-          schema:
-            type: string
-            default: "50100"
-        - variable: SFTPGO_FTPD__BINDINGS__0__PORT
-          label: "SFTPGO_FTPD__BINDINGS__0__PORT"
-          schema:
-            type: string
-            default: "2121"
-        - variable: SFTPGO_WEBDAVD__BINDINGS__0__PORT
-          label: "SFTPGO_WEBDAVD__BINDINGS__0__PORT"
-          schema:
-            type: string
-            default: "10080"
         - variable: SFTPGO_FTPD__BINDINGS__0__DEBUG
-          label: "SFTPGO_FTPD__BINDINGS__0__DEBUG"
+          label: "SFTPGo FTD Bindings Debug (Disabled by default)"
           description: "0 = false, 1 = true"
           schema:
             type: string
@@ -86,7 +66,7 @@ questions:
 # Include{serviceSelectorLoadBalancer}
 # Include{serviceSelectorExtras}
                     - variable: ftpport
-                      label: "ftpport Service Port Configuration"
+                      label: "FTP Port"
                       schema:
                         additional_attrs: true
                         type: dict
@@ -107,7 +87,7 @@ questions:
 # Include{serviceSelectorLoadBalancer}
 # Include{serviceSelectorExtras}
                     - variable: sftpport
-                      label: "sftpport Service Port Configuration"
+                      label: "SFTP Port"
                       schema:
                         additional_attrs: true
                         type: dict
@@ -119,7 +99,7 @@ questions:
                               type: int
                               default: 2022
                               required: true
-        - variable: passiveports
+        - variable: passiveportsstart
           label: 'passiveports service'
           schema:
             additional_attrs: true
@@ -127,8 +107,8 @@ questions:
             attrs:
 # Include{serviceSelectorLoadBalancer}
 # Include{serviceSelectorExtras}
-                    - variable: passiveports
-                      label: "passiveports Service Port Configuration"
+                    - variable: passiveportsstart
+                      label: "Passive Ports Beginning Range"
                       schema:
                         additional_attrs: true
                         type: dict
@@ -140,6 +120,27 @@ questions:
                               type: int
                               default: 50000
                               required: true
+        - variable: passiveportsend
+          label: 'passiveports service'
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+# Include{serviceSelectorLoadBalancer}
+# Include{serviceSelectorExtras}
+                    - variable: passiveportsend
+                      label: "Passive Ports Ending Range"
+                      schema:
+                        additional_attrs: true
+                        type: dict
+                        attrs:
+                          - variable: port
+                            label: "Port"
+                            description: "This port exposes the container port on the service"
+                            schema:
+                              type: int
+                              default: 51000
+                              required: true
         - variable: webdavport
           label: 'webdavport service'
           schema:
@@ -149,7 +150,7 @@ questions:
 # Include{serviceSelectorLoadBalancer}
 # Include{serviceSelectorExtras}
                     - variable: webdavport
-                      label: "webdavport Service Port Configuration"
+                      label: "WebDAV Service Port Configuration"
                       schema:
                         additional_attrs: true
                         type: dict
@@ -182,13 +183,6 @@ questions:
 # Include{persistenceBasic}
         - variable: configpath
           label: "configpath Storage"
-          schema:
-            additional_attrs: true
-            type: dict
-            attrs:
-# Include{persistenceBasic}
-        - variable: shareaccess
-          label: "shareaccess Storage"
           schema:
             additional_attrs: true
             type: dict
