--- a/charts/stable/vikunja/templates/common.yaml
+++ b/charts/stable/vikunja/templates/common.yaml
@@ -1,5 +1,6 @@
 {{- include "tc.common.loader.init" . }}
 
 {{ include "vikunja.secrets" . }}
+{{ include "vikunja.nginx" . }}
 
 {{ include "tc.common.loader.apply" . }}
