--- a/charts/stable/vikunja/values.yaml
+++ b/charts/stable/vikunja/values.yaml
@@ -21,20 +21,18 @@ podSecurityContext:
   runAsGroup: 0
 
 configmap:
-  config:
+  nginx-config:
     enabled: true
     data:
-      nginx-config: |-
-        server {
-          listen 8080;
-          location / {
-              proxy_pass http://localhost:80;
-          }
-          location ~* ^/(api|dav|\.well-known)/ {
-              proxy_pass http://localhost:3456;
-              client_max_body_size {{ .Values.env.VIKUNJA_FILES_MAXSIZE | upper | trimSuffix "B" }};
-          }
-        }
+      nginx-config: |
+        {{ (include "vikunja.nginx" . | fromYaml).nginx }}
+
+vikunja:
+  service:
+    # API Port, internal
+    interface: ":3456"
+    jwtttl: 259200
+    jwtttllong: 2592000
 
 env:
   VIKUNJA_REDIS_ENABLED: 1
@@ -46,8 +44,6 @@ env:
   VIKUNJA_SERVICE_TIMEZONE: "{{ .Values.TZ }}"
   # User Defined
   VIKUNJA_SERVICE_FRONTENDURL: "http://localhost:8080"
-  VIKUNJA_SERVICE_JWTTTL: 259200
-  VIKUNJA_SERVICE_JWTTTLLONG: 2592000
   VIKUNJA_SERVICE_MAXITEMSPERPAGE: 50
   VIKUNJA_FILES_MAXSIZE: "20MB"
   VIKUNJA_SERVICE_ENABLECALDAV: true
@@ -97,7 +93,6 @@ service:
     ports:
       main:
         port: 10220
-        targetPort: 8080
 
 additionalContainers:
   frontend:
@@ -110,7 +105,7 @@ additionalContainers:
       - containerPort: 8080
         name: main
     volumeMounts:
-      - name: vikunja-config
+      - name: vikunja-nginx
         mountPath: "/etc/nginx/conf.d/default.conf"
         subPath: nginx-config
         readOnly: true
@@ -118,15 +113,20 @@ additionalContainers:
 persistence:
   files:
     enabled: true
-    mountPath: "/app/vikunja/files"
+    mountPath: /app/vikunja/files
+  vikunja-nginx:
+    enabled: true
+    noMount: true
+    mountPath: /etc/nginx/conf.d/default.conf
+    subPath: nginx-config
+    type: configMap
+    objectName: '{{ template "tc.common.names.fullname" . }}-nginx-config'
   vikunja-config:
-    enabled: "true"
-    mountPath: "/etc/nginx/conf.d/default.conf"
-    subPath: "nginx-config"
-    type: "custom"
-    volumeSpec:
-      configMap:
-        name: '{{ printf "%v-config" (include "tc.common.names.fullname" .) }}'
+    enabled: true
+    mountPath: /etc/vikunja
+    subPath: config.yml
+    type: secret
+    objectName: '{{ template "tc.common.names.fullname" . }}-secret'
 
 postgresql:
   enabled: true
