--- a/charts/stable/vikunja/values.yaml
+++ b/charts/stable/vikunja/values.yaml
@@ -33,60 +33,82 @@ vikunja:
     interface: ":3456"
     jwtttl: 259200
     jwtttllong: 2592000
-
-env:
-  VIKUNJA_REDIS_ENABLED: 1
-  VIKUNJA_CACHE_ENABLED: 1
-  VIKUNJA_CACHE_TYPE: "redis"
-  VIKUNJA_DATABASE_TYPE: "postgres"
-  VIKUNJA_DATABASE_USER: "{{ .Values.postgresql.postgresqlUsername }}"
-  VIKUNJA_DATABASE_DATABASE: "{{ .Values.postgresql.postgresDatabase }}"
-  VIKUNJA_SERVICE_TIMEZONE: "{{ .Values.TZ }}"
-  # User Defined
-  VIKUNJA_SERVICE_FRONTENDURL: "http://localhost:8080"
-  VIKUNJA_SERVICE_MAXITEMSPERPAGE: 50
-  VIKUNJA_FILES_MAXSIZE: "20MB"
-  VIKUNJA_SERVICE_ENABLECALDAV: true
-  VIKUNJA_SERVICE_ENABLELINKSHARING: true
-  VIKUNJA_SERVICE_ENABLEREGISTRATION: true
-  VIKUNJA_SERVICE_ENABLETASKATTACHMENTS: true
-  VIKUNJA_SERVICE_ENABLETASKCOMMENTS: true
-  VIKUNJA_SERVICE_ENABLETOTP: true
-  VIKUNJA_SERVICE_ENABLEEMAILREMINDERS: true
-  VIKUNJA_SERVICE_ENABLEUSERDELETION: true
-  VIKUNJA_BACKGROUNDS_ENABLED: true
-  VIKUNJA_RATELIMIT_ENABLED: false
-  VIKUNJA_RATELIMIT_PERIOD: 60
-  VIKUNJA_RATELIMIT_LIMIT: 100
-  # VIKUNJA_MAILER_HOST: ""
-  # VIKUNJA_MAILER_PORT: 587
-  # VIKUNJA_MAILER_USERNAME: ""
-  # VIKUNJA_MAILER_PASSWORD: ""
-  # VIKUNJA_MAILER_FROMEMAIL: ""
-  # VIKUNJA_MAILER_SKIPTLSVERIFY: false
-  # VIKUNJA_MAILER_FORCESSL: false
-  # VIKUNJA_MAILER_QUEUELENGTH: 100
-  # VIKUNJA_MAILER_QUEUETIMEOUT: 30
-  VIKUNJA_DATABASE_HOST:
-    secretKeyRef:
-      name: dbcreds
-      key: plainhost
-  VIKUNJA_DATABASE_PASSWORD:
-    secretKeyRef:
-      name: dbcreds
-      key: postgresql-password
-  VIKUNJA_REDIS_HOST:
-    secretKeyRef:
-      name: rediscreds
-      key: plainporthost
-  VIKUNJA_REDIS_PASSWORD:
-    secretKeyRef:
-      name: rediscreds
-      key: redis-password
-  VIKUNJA_SERVICE_JWT_SECRET:
-    secretKeyRef:
-      name: vikunja-secrets
-      key: VIKUNJA_SERVICE_JWT_SECRET
+    frontendurl: http://localhost:10220
+    maxitemsperpage: 50
+    enablecaldav: true
+    motd: Welcome to your new Vikunja instance
+    enablelinksharing: true
+    enableregistration: true
+    enabletaskattachments: true
+    enabletaskcomments: true
+    enabletotp: true
+    enableemailreminders: true
+    enableuserdeletion: true
+    maxavatarsize: 1024
+  cors:
+    enabled: true
+    origins: []
+    maxage: 0
+  mailer:
+    enabled: false
+    host: ""
+    port: 587
+    authtype: plain
+    username: ""
+    password: ""
+    skiptlsverify: false
+    fromemail: ""
+    queuelength: 100
+    queuetimeout: 30
+    forcessl: true
+  log:
+    enabled: true
+    standard: stdout
+    level: INFO
+    database: false
+    databaselevel: WARNING
+    http: stdout
+    echo: false
+    events: stdout
+    eventslevel: info
+  ratelimit:
+    enabled: false
+    kind: user
+    period: 60
+    limit: 100
+  files:
+    maxsize: 20MB
+  avatar:
+    gravatarexpiration: 3600
+  legal:
+    imprinturl: ""
+    privacyurl: ""
+  metrics:
+    enabled: false
+    username: ""
+    password: ""
+  defaultsettings:
+    avatar_provider: initials
+    avatar_file_id: 0
+    email_reminders_enabled: false
+    discoverable_by_name: false
+    discoverable_by_email: false
+    overdue_tasks_reminders_enabled: true
+    overdue_tasks_reminders_time: "9:00"
+    default_list_id: 0
+    week_start: 0
+    language: <unset>
+    timezone: <time zone set at service.timezone>
+  serviceExtra: {}
+  filesExtra: {}
+  defaultsettingsExtra: {}
+  metricsExtra: {}
+  legalExtra: {}
+  avatarExtra: {}
+  ratelimitExtra: {}
+  corsExtra: {}
+  logExtra: {}
+  mailerExtra: {}
 
 service:
   main:
@@ -130,13 +152,13 @@ persistence:
 
 postgresql:
   enabled: true
-  existingSecret: "dbcreds"
+  existingSecret: dbcreds
   postgresqlUsername: vikunja
   postgresqlDatabase: vikunja
 
 redis:
   enabled: true
-  existingSecret: "rediscreds"
+  existingSecret: rediscreds
 
 portal:
   enabled: true
