--- a/charts/stable/vikunja/values.yaml
+++ b/charts/stable/vikunja/values.yaml
@@ -127,7 +127,8 @@ vikunja:
     openid:
       enabled: false
       redirecturl: ""
-      providers: []
+      providers:
+        []
         # - name: ""
         #   authurl: ""
         #   logouturl: ""
